--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -59,6 +59,11 @@
       <div id="background-video-player-streams"></div>
       <div class="__overlay overlay --streams"></div>
     </div>
+    {% endif %} {% if page.videos.riverbank %}
+    <div class="__video --riverbank" data-video-name="riverbank">
+      <div id="background-video-player-riverbank"></div>
+      <div class="__overlay overlay --riverbank"></div>
+    </div>
     {% endif %}
   </div>
   <div class="overlay --util"></div>
