Team page styled

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -64,6 +64,11 @@
       <div id="background-video-player-riverbank"></div>
       <div class="__overlay overlay --riverbank"></div>
     </div>
+    {% endif %} {% if page.videos.team %}
+    <div class="__video --team" data-video-name="team">
+      <div id="background-video-player-team"></div>
+      <div class="__overlay overlay --team"></div>
+    </div>
     {% endif %}
   </div>
   <div class="overlay --util"></div>
