Resources page copy updates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
         hamburger_link.html title="The Business of River"
         section="home-how-does-river-work" %} {% include hamburger_link.html
         title="The Business of Data" section="home-business-of-data" %} {%
-        include hamburger_link.html title="About" section="home-resources" %}
+        include hamburger_link.html title="Resources" section="home-resources" %}
       </ul>
     </div>
   </div>
