--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
   <div class="__links">
     <div class="__link-container">
       <a
-        href="{{ site.baseurl }}{% link signup.html %}"
+        href="javascript:void"
         title="Videos"
         class="__link l1"
         >Videos</a
