Videos page, style updates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,28 +39,11 @@
   <div class="__links">
     <div class="__link-container">
       <a
-        href="javascript:void"
+        href="{{ site.baseurl }}{% link videos.html %}"
         title="Videos"
         class="__link l1"
         >Videos</a
       >
-      <ul class="__sublinks">
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link index.html %}#home-video-1" onclick="return river.showSection(event)"
-            >You create $data$ every day</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link index.html %}#home-data-untapped" onclick="return river.showSection(event)"
-            >Data Untapped</a
-          >
-        </li>
-        <li>
-          <a class="l1" href="{{ site.baseurl }}{% link index.html %}#home-business-of-data" onclick="return river.showSection(event)"
-            >The Business of Data</a
-          >
-        </li>
-      </ul>
     </div>
 
     <div class="__link-container">
