Update background video for videos HTML

--- a/_sass/overlays.scss
+++ b/_sass/overlays.scss
@@ -154,4 +154,8 @@
   &.--team {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
   }
+
+  &.--videos {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
+  }
 }
