Add password protection

--- a/_includes/background_video.html
+++ b/_includes/background_video.html
@@ -69,6 +69,11 @@
       <div id="background-video-player-team"></div>
       <div class="__overlay overlay --team"></div>
     </div>
+    {% endif %}  {% if page.videos.password %}
+    <div class="__video --password" data-video-name="password">
+      <div id="background-video-player-password"></div>
+      <div class="__overlay overlay --password"></div>
+    </div>
     {% endif %}
   </div>
   <div class="overlay --util"></div>
