--- a/_includes/hamburger_link.html
+++ b/_includes/hamburger_link.html
@@ -1,6 +1,6 @@
 <li class="__li">
   <a
-    href="{{ site.baseurl }}{% link index.html %}#{{ include.section }}"
+    href="{{ site.baseurl }}{% link river.html %}#{{ include.section }}"
     onclick="return river.showSection(event)"
     title="{{ include.title }}"
     class="l2"
