--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="header" class="header">
   <div class="__logo">
     <a
       href="{{ site.baseurl }}{% link index.html %}"
