--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,6 +1,7 @@
 :root {
   --blue-dark: #0f2b4d;
   --blue-background: #0e2b68;
+  --blue-super-dark: #010615;
   --gray-dark: #3f3f3f;
   --gray404040: #404040;
   --gray-beast: #666666;
